# uba_nir24

./: .gitignore  docker-compose.yaml  nir_notebook.ipynb  nir_test.ipynb  pyproject.toml
.ipynb_checkpoints/: nir_notebook-checkpoint.ipynb
app/: analyzer_1.py  config.py  instance.py  pre_processer.py
app/analyzers/: analyzer_1.py
app/features/: __init__.py  consts.py  device_features.py  file_features.py  logon_features.py  mail_features.py  utils.py
app/sql_scripts/: __init__.py  sql_scripts.py
app/utils/: utils.py
envs/: .env
